<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    
    <AutoCompleteTextView
            android:id="@+id/text_username"
            android:hint="@string/prompt_sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    
    <EditText
            android:id="@+id/text_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sign_up_nickname"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_sign_up_password"
            android:id="@+id/text_pwd"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_sign_up_password_second"
            android:id="@+id/text_pwd_confirm"/>
    
    <Button
            android:text="@string/action_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:id="@+id/btn_sign_up"/>
</LinearLayout>